# FdF

./: CMakeLists.txt  Makefile  README.md  fdf  fdf.h  get_next_line.c  get_next_line.h  init_map.c  keyboard.c  line_drawing.c  main.c  movements.c  put_image.c  read_map.c  remove_map.c  test
include/: fdf.h
libft/: Makefile  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstpushback.c  libft.h
libmlx/man/man1/: mlx_pixel_put.1
minilibx_macos/man/man1/: mlx_new_image.1
minilibx_macos/man/man3/: mlx_pixel_put.1
src/: keyboard.c  line_drawing.c  main.c  movements.c  put_image.c  read_map.c  remove_map.c
test_maps/: test.fdf
